--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
       Select a date and available units will be shown. Add items to cart, and check out. Payment link will appear when you choose full payment or deposit.
       <br/>Deliveries within 10 miles of Richfield are free.
       <br/>All other outlying areas are available with a Travel Fee. $35 for 10-20 miles, $52 for 20-30 miles, $96 for 30-40 miles. (not included in total price)
-      <br/>No cancellations. Rescheduling is subject to availability.
+      <br/>No cancellations.<br/> 
+      Rescheduling is subject to availability.
       <br/>A $50 deposit per unit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/> 
       We can collect cash, check, cash app, venmo, or paypal the day of.
     </p>
