--- a/index.html
+++ b/index.html
@@ -166,12 +166,12 @@
     <img src="https://lh3.googleusercontent.com/a-/ALV-UjUTAoSFAR5OUMj0ZCkgLF1RMYoE-Q85G0HPftaFEBBIjjzw9cQ=s265-w265-h265" alt="Slide Guys Logo" class="logo">
     <h2 class="mb-3">Slide Guys Booking</h2>
     <p>
-      Select a date and available units will be shown. Add items to cart, and check out. Payment link will appear when you choose full payment or deposit.
+      Select a date and available units will be shown. Add items to cart. Payment link will appear when you choose "full payment" or "deposit".
       <br/>Deliveries within 10 miles of Richfield are free.
       <br/>All other outlying areas are available with a Travel Fee. $35 for 10-20 miles, $52 for 20-30 miles, $96 for 30-40 miles.<br/> (not included in total price)
       <br/>No cancellations.<br/> 
       Rescheduling is subject to availability.
-      <br/>A $50 deposit per unit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/> 
+      <br/>A $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/> 
       We can collect cash, check, cash app, venmo, or paypal the day of.
     </p>
 
