--- a/index.html
+++ b/index.html
@@ -225,10 +225,10 @@
       <div class="pay-choice-wrap">
         <div class="d-flex gap-2 mt-3">
           <button type="button" id="payFullBtn" class="btn btn-outline-primary w-50">
-            Full Amount ($0)
+            Pay Full Amount ($0)
           </button>
           <button type="button" id="payDepositBtn" class="btn btn-outline-primary w-50">
-            Deposit Amount ($0)
+            Pay Deposit Amount ($0)
           </button>
         </div>
 
