--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <br/>All other outlying areas are available with a Travel Fee. $35 for 10-20 miles, $52 for 20-30 miles, $96 for 30-40 miles.<br/> (not included in total price)
       <br/>No cancellations.<br/> 
       Rescheduling is subject to availability.
-      <br/>A $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/> 
+      <br/>A non-refundable $50 deposit is due at time of reservation (per unit). We accept venmo, credit card, and pay-pal for the deposit.<br/> 
       We can collect cash, check, cash app, venmo, or paypal the day of.
     </p>
 
